--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "angularx-social-login": "^3.2.2",
     "chart.js": "^2.9.3",
     "concurrently": "^5.3.0",
     "emailjs-com": "^2.6.3",
