--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^5.3.0",
     "emailjs-com": "^2.6.3",
     "ng2-charts": "^2.4.1",
+    "ngx-countdown-timer": "^0.2.0",
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
