Changed nav login to popup instead of navigating to login page. Added firebase for blog app.

--- a/angular.json
+++ b/angular.json
@@ -117,8 +117,13 @@
               "devServerTarget": "brentowen-net:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "brentowen-net"
 }
